# XAtlasSharp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: Directory.Build.props  XAtlas.sln
src/XAtlas/: XAtlas.i  XAtlasCppDll.vcxproj  XAtlas_wrap.cxx  XAtlas_wrap.h  cs_struct.i
src/XAtlasSharp/: XAtlasSharp.csproj
src/XAtlasSharp/Wrapper/: AddMeshError.cs  Atlas.cs  Chart.cs  ChartOptions.cs  ChartType.cs  IndexFormat.cs  Mesh.cs  MeshDecl.cs  PackOptions.cs  ProgressCategory.cs  SWIGTYPE_p_f_p_q_const__float_p_float_unsigned_int_p_q_const__unsigned_int_unsigned_int__void.cs  SWIGTYPE_p_float.cs  UvMeshDecl.cs  Vertex.cs  XAtlas.cs  XAtlasPINVOKE.cs
src/XAtlasSharpTest/: Mesh.cs  ObjParserHelper.cs  Program.cs  VertexPositionNormalTexture.cs  XAtlasSharpTest.csproj
src/XAtlasSharpTest/Properties/: launchSettings.json
